--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Resume</a></li>
+							<li><a href="elements.html">Research Projects</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Hi, my name is Sarah</h1>
 							</header>
 							<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
